# Chip8-Emulator

./: CMakeLists.txt  README.md
sources/: main.c  utils.c  utils.h
